istio/vote-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-vs
spec:
  hosts:
  - "*"
  gateways:
  - voting-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: vote
        port:
          number: 80
